compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case_clause_guards__referencing_pattern_var.snap
---
source: compiler-core/src/javascript/tests/case_clause_guards.rs
expression: "pub fn main(xs) {\n  case xs {\n    #(x) if x -> 1\n    _ -> 0\n  }\n}\n"
---
----- SOURCE CODE
pub fn main(xs) {
  case xs {
    #(x) if x -> 1
    _ -> 0
  }
}


----- COMPILED JAVASCRIPT
export function main(xs) {
  if (xs[0]) {
    let x = xs[0];
    return 1n;
  } else {
    return 0n;
  }
}
